# home-security-with-LLM-and-IOT

./: .env.example  .gitignore  ABOUT.md  QUICK_START.md  README.md  pyproject.toml  requirements.txt  run_server.sh
esp32_code/: ESP32_SETUP_README.md  smart_security.ino
src/: config.py  server.py
src/tools/: __init__.py  camera.py  door_control.py  motion_sensor.py  summary.py
src/utils/: __init__.py  http_client.py  mock_data.py
